[package]
name = "send_pack_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.190", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tower-http = {version = "0.4.4", features = ["fs"]}
tower-cookies = "0.9.0"
tracing-subscriber = "0.3.17"
httpc-test = "0.1.7"
anyhow = "1.0.75"
lazy-regex = "3.0.2"
serde_json = "1.0.107"